--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
     --color-white:#fff;
     --color-light:rgba(255,255,255,0.6);
 
-    --transtion:all 400ms ease;
+    --transition:all 400ms ease;
 
     --container-width-lg:75%;
     --container-width-md:86%;
@@ -41,6 +41,7 @@ body{
     color: var(--color-white);
     line-height: 1.7;
     background-image: url(./assets/bg-texture.png);
+    
 }
 
 /* General Styles */
@@ -59,6 +60,7 @@ h1{
 
 section{
     margin-top:8rem;
+    height: 100vh;
 }
 
 section>h2,section>h5{
@@ -77,7 +79,7 @@ section > h2{
 
 a{
     color:var(--color-primary);
-    transition:var(--transtion);
+    transition:var(--transition);
 }
 
 a:hover{
@@ -92,7 +94,7 @@ a:hover{
     border-radius: 0.4rem;
     cursor: pointer;
     border: 1px solid var(--color-primary);
-    transition: var(--transtion);
+    transition: var(--transition);
 }
 
 .btn:hover{
