active with scroll

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -37,9 +37,9 @@ header{
 }
 
 /* Me */
-.me{
-    background: linear-gradient(
-        var(--color-primary),transparent); 
+.me img{
+    /* background: linear-gradient(
+        var(--color-primary),transparent);  */
     width: 22rem;
     height: 30rem;
     position: absolute;
