--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -17,7 +17,7 @@ nav{
 nav a{
     background: transparent;
     border-radius: 50%;
-    padding: 0.9rem;
+    padding: 0.6rem;
     display: flex;
     color: var(--color-light);
     font-size: 1.1rem;
@@ -28,6 +28,6 @@ nav a:hover{
 }
 
 nav a.active{
-    background-color: rgb(15, 5, 5);
-    color: var(--color-white);
+    background-color: var(--color-primary);
+    color: var(--color-bg);
 }
