--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -44,9 +44,9 @@
 
 }
 
-.service p{
-    padding: 1rem 0;
-    font-size: 1.5rem;
+.service .description{
+    padding: 1rem ;
+    font-size: 1rem;
     text-align: center;
 }
 
@@ -54,7 +54,7 @@
 @media screen and (max-width:1024px) {
     .services_container{
         grid-template-columns: 1fr;
-        gap: 2rem;
+        /* gap: 2rem; */
     }
     .service{
         height: auto;
@@ -67,4 +67,8 @@
         grid-template-columns: 1fr ;
         gap: 1.5rem;
     }
+    .service{
+        width: 100%;
+    }
+
 }
