--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -43,6 +43,7 @@
     
     .experience_container{
         grid-template-columns: 1fr ;
+        gap: 2rem;
     }
     
     .experience_container>div{
@@ -58,11 +59,14 @@
 /* media query for small devices */
 @media screen and (max-width:600px) {
     .experience_container{
+        grid-template-columns: 1fr ;
         gap: 1rem;
+        
     }
     
     .experience_container>div{
         width: 100%;
         padding: 2rem 1rem;
+        margin: 0 auto;
     }
 }
